[tool.poetry]
name = "repl_python3_Chill-Islands-Extras"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
discord-components = "^2.1.2"
randfacts = "^0.13.1"
youtube_dl = "^2021.6.6"
praw = "^7.4.0"
twitchAPI = "^2.5.0"
prsaw = "^0.4.0"
psutil = "^5.8.0"
jishaku = "^2.3.2"
discord = "^1.7.3"
PyNaCl = "^1.5.0"
profanity-check = "^1.0.3"
humanfriendly = "^10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
